# vgi-causal

./: CLAUDE.md  Makefile  README.md  causal_worker.py  conftest.py  pyproject.toml
.github/workflows/: ci.yml
ci/: README.md  run-integration.sh
test/sql/: causal.test
tests/: harness.py  synthetic.py  test_causal.py  test_client.py  test_tables.py
vgi_causal/: __init__.py  buffering.py  causal.py  meta.py  tables.py  worker.py
